_sass/_article.scss
// Theme of Beijing Foosball
// Copyright (c) David Zhang, 2024

.article {
  margin-bottom: 2rem;
  text-align: left;

  .article-head {
    margin-bottom: 2.8em;
    margin-top: 3.6rem;
    text-align: left;

    .article-title {
      color: $main;
      font-size: 2rem;
      text-align: center;
    }
  }

  .article-main {
    font-size: 1rem;
    margin-top: 1.2rem;

    .intro {
      border-bottom: 1px solid $secondary;
      margin: 0 auto 1.8rem;
      padding: 0 1.8rem 1.8rem;
      text-align: center;

      a {
        text-decoration: $bright dotted underline;
        text-underline-offset: 6px;
      }
    }
  }
}

@include print {
  .article {
    .article-head {
      margin: 2rem 0;
    }
  }
}

h1 {
  color: $main;
  font-size: 2rem;
  font-weight: 400;
  padding-top: 1.2rem;
  text-align: left;
}

h2 {
  color: $main;
  font-size: 1.6rem;
  font-weight: 400;
  padding-top: 1rem;
  text-align: left;
}

h3 {
  color: $main;
  font-size: 1.4rem;
  font-weight: 500;
  padding-top: 0.8rem;
  text-align: left;
}

h4 {
  color: $main;
  font-size: 1.2rem;
  font-weight: 600;
  padding-top: 0.6rem;
  text-align: left;
}

h5 {
  color: $main;
  font-size: 1rem;
  font-weight: 700;
  padding-top: 0.4rem;
  text-align: left;
}

blockquote {
  border-left: 0.2rem solid $accent;
  margin-left: 0;
  padding-left: 1rem;
}

p {
  // scss-lint:disable VendorPrefix
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
  line-height: 1.8rem;
  margin-top: 1.5rem;
}

sup {
  font-size: 0.6rem;
  line-height: 0.6rem;
  vertical-align: auto;
}

hr {
  margin-bottom: 3rem;
  margin-top: 3rem;
  width: 30%;
}

ul,
ol {
  p {
    margin: 0;
  }

  li {
    line-height: 1.8rem;
    margin-left: -1rem;

    p {
      line-height: 1.8rem;
      margin: 0;
    }
  }
}

table {
  border-collapse: collapse;
  width: 100%;

  tr {
    &:hover {
      background-color: $main;
    }

    th {
      background-color: $main;
      padding: 0.2rem 0.4rem;
    }

    td {
      padding: 0.2rem 0.4rem;
    }
  }
}

